fixing overflow and content.js

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,8 +28,3 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
-section {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
